--- a/index.html
+++ b/index.html
@@ -181,39 +181,41 @@
           </div>
           <div class="hidden md:flex space-x-8">
             <a
-              href="#docs"
+              href="docs.html"
               class="nav-link text-gray-700 hover:text-purple-600 font-medium"
               >Docs</a
             >
             <a
-              href="#api"
+              href="api.html"
               class="nav-link text-gray-700 hover:text-purple-600 font-medium"
               >API Reference</a
             >
             <a
-              href="#quickstart"
+              href="quickstart.html"
               class="nav-link text-gray-700 hover:text-purple-600 font-medium"
               >Quick Start</a
             >
             <a
-              href="#download"
+              href="quickstart.html#download"
               class="nav-link text-gray-700 hover:text-purple-600 font-medium"
               >Download</a
             >
           </div>
           <div class="flex items-center space-x-4">
             <a
-              href="https://github.com"
+              href="https://github.com/WhisperNet/research-paper-rag-assessment/tree/submission/ridowan"
               target="_blank"
               class="text-gray-700 hover:text-purple-600"
             >
               <i class="fab fa-github text-2xl"></i>
             </a>
-            <button
-              class="gradient-bg text-white px-6 py-2 rounded-lg font-medium hover:opacity-90 transition"
-            >
-              Get Started
-            </button>
+            <a href="quickstart.html">
+              <button
+                class="gradient-bg text-white px-6 py-2 rounded-lg font-medium hover:opacity-90 transition"
+              >
+                Get Started
+              </button>
+            </a>
           </div>
         </div>
       </div>
@@ -246,16 +248,20 @@
             <div
               class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4"
             >
-              <button
-                class="gradient-bg text-white px-8 py-4 rounded-lg font-semibold text-lg hover:opacity-90 transition glow"
-              >
-                <i class="fas fa-rocket mr-2"></i>Start in 30 Seconds
-              </button>
-              <button
-                class="bg-white text-gray-700 px-8 py-4 rounded-lg font-semibold text-lg hover:bg-gray-50 transition border-2 border-gray-200"
-              >
-                <i class="fas fa-play-circle mr-2"></i>Watch Demo
-              </button>
+              <a href="quickstart.html">
+                <button
+                  class="gradient-bg text-white px-8 py-4 rounded-lg font-semibold text-lg hover:opacity-90 transition glow"
+                >
+                  <i class="fas fa-rocket mr-2"></i>Start in 30 Seconds
+                </button>
+              </a>
+              <a href="docs.html">
+                <button
+                  class="bg-white text-gray-700 px-8 py-4 rounded-lg font-semibold text-lg hover:bg-gray-50 transition border-2 border-gray-200"
+                >
+                  <i class="fas fa-book mr-2"></i>Read Documentation
+                </button>
+              </a>
             </div>
             <div class="mt-8 flex items-center space-x-6 text-sm text-gray-600">
               <div class="flex items-center space-x-2">
@@ -591,16 +597,23 @@
         <div
           class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4"
         >
-          <button
-            class="bg-white text-purple-700 px-8 py-4 rounded-lg font-semibold text-lg hover:bg-gray-100 transition"
+          <a href="quickstart.html">
+            <button
+              class="bg-white text-purple-700 px-8 py-4 rounded-lg font-semibold text-lg hover:bg-gray-100 transition"
+            >
+              <i class="fas fa-download mr-2"></i>Get Started Now
+            </button>
+          </a>
+          <a
+            href="https://github.com/WhisperNet/research-paper-rag-assessment/tree/submission/ridowan"
+            target="_blank"
           >
-            <i class="fas fa-download mr-2"></i>Get Started Now
-          </button>
-          <button
-            class="bg-transparent border-2 border-white text-white px-8 py-4 rounded-lg font-semibold text-lg hover:bg-white hover:text-purple-700 transition"
-          >
-            <i class="fab fa-github mr-2"></i>View on GitHub
-          </button>
+            <button
+              class="bg-transparent border-2 border-white text-white px-8 py-4 rounded-lg font-semibold text-lg hover:bg-white hover:text-purple-700 transition"
+            >
+              <i class="fab fa-github mr-2"></i>View on GitHub
+            </button>
+          </a>
         </div>
       </div>
     </section>
@@ -658,7 +671,12 @@
             <h4 class="text-white font-semibold mb-4">Community</h4>
             <ul class="space-y-2 text-sm">
               <li>
-                <a href="#" class="hover:text-white transition">GitHub</a>
+                <a
+                  href="https://github.com/WhisperNet/research-paper-rag-assessment/tree/submission/ridowan"
+                  target="_blank"
+                  class="hover:text-white transition"
+                  >GitHub</a
+                >
               </li>
               <li>
                 <a href="#" class="hover:text-white transition">Discord</a>
