--- a/index.html
+++ b/index.html
@@ -255,11 +255,15 @@
                   <i class="fas fa-rocket mr-2"></i>Start in 30 Seconds
                 </button>
               </a>
-              <a href="docs.html">
+              <a
+                href="https://youtu.be/bBZe-PzkIac?si=ZzqAvgKwLB5C1XpD"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <button
                   class="bg-white text-gray-700 px-8 py-4 rounded-lg font-semibold text-lg hover:bg-gray-50 transition border-2 border-gray-200"
                 >
-                  <i class="fas fa-book mr-2"></i>Read Documentation
+                  <i class="fas fa-play-circle mr-2"></i>Watch Demo
                 </button>
               </a>
             </div>
@@ -288,7 +292,7 @@
               <div class="text-yellow-400">✓ Redis cache active</div>
               <div class="text-yellow-400">✓ Ollama LLM loaded</div>
               <div class="mt-2 text-green-400">
-                🚀 SageAI running on http://localhost:3000
+                🚀 SageAI running on http://localhost:8080/
               </div>
             </div>
             <div
